--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,3 +14,15 @@
   padding: 1rem; /* Отступы внутри */
   background-color: #f3f4f6; /* bg-gray-100 */
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+/* Скрытие скроллбара для Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
